ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "www.levys.co.il"
    http:
      paths:
      - path: /bear
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
